style.css
* {
    margin: 0;
    padding: 0;
}

html,
body,
main {
    height: 100%;
    max-height: 100% !important;
    background-color: rgb(242, 242, 242);
}
:root {
    --red: rgb(255, 0 0);
}
.main{
    
    position: relative;
    z-index: 2;
  
}

.header{
    background-color: rgb(255, 255, 255);
    display: flex;
    justify-content: center;
    box-shadow: 0 0 5px rgb(133, 133, 133);
}

.headerContent{
    background-color: rgba(0, 0, 0, 0);
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 60rem;
    height: 7rem;
}

.title{
    font: 2.5rem 'belanosima', sans-serif;
}

.newBook{
    padding: 1rem;
    background-color: white;
    font: 700 1.2rem 'roboto';
    position: relative;
    outline: none;
    border: none;
    outline: 1px solid black;
    transition: all 0.1s;
}
.newBook:hover{
    translate: -3px -3px;
    /* box-shadow: 1px 1px 5px rgb(0, 0, 0); */
    position: relative;
}
.newBook:active{
    background-color: red;
    translate: 0.1px 0.1px;
}
.buttonWrapper{
    transition: all 0.1s;
}
.buttonWrapper:hover{
    outline: 1px solid rgb(85, 85, 85);
    width: 120px;
    height: 56px;
    background-color: rgb(146, 146, 146);
}
.formContainer{
    height:  35rem;
    width: 30rem;
    background-color: rgb(255, 255, 255);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    border-radius: 1rem;
    display: none;
}
.overlay {
    background-color: rgba(0, 0, 0, 0.22);
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 100;
    transition: all 0.1s ease;
}
.show {
    display: block !important;
}
.formTitle {
    font: 400 2rem 'belanosima', sans-serif;
    margin: 1.5rem 0 0.5rem 2rem;
}
form {
    display: grid;
    grid-template: repeat(3, 2fr) 1fr 2fr/ 1fr;
    height: 85%;
    align-items: center;
    justify-items: center;
    margin: 0 2rem;
}
.field {
    display: grid;
    grid-template: 1fr 1fr / 1fr;
    font: 700 1.5rem 'roboto';
    width: 22rem;
}
form .readField {
    display: flex;
    justify-content: space-between;
    padding-top: 0.8rem;
}
.field > input{
    font: 1.3rem 'roboto';
    padding: 0.2rem;
    border-radius: 0.5rem;
    background-color: rgb(235, 235, 235);
    border: none;
    height: 1.9rem;
}
.field > input:focus {
    outline: 2px solid rgb(0, 0, 0);
    background-color: rgb(239, 239, 239);
    box-shadow: 3px 3px 3px rgb(166, 166, 166);
}
.add {
    height: 3rem;
    width: 17rem;
    font: 700 1.5rem 'roboto';
    border-radius: 1rem;
    border: none;
    background-color: rgb(226, 226, 226);
    box-shadow: 1px 1px 1px rgb(0, 0, 0);
    transition: all 0.1s;
}
.add:hover {
    background-color: rgb(188, 188, 188);
    translate: -1px -1px;
    box-shadow: 2px 2px 1px rgb(0, 0, 0);
}
.add:active {
    background-color: red;
    translate: 1px 1px;
    box-shadow: 1px 1px 1px rgb(0, 0, 0);
}
.read{
    width: 1.5rem;
    accent-color: red;
    border: 1px solid black;
    border-radius: 0.3rem;
    outline: none !important;
    box-shadow: none !important;
}
[for="read"] {
    margin-top: 0.1rem;
}
.read:checked {
    background-color: red;
    
}
.content {
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(auto-fill, minmax(20rem, 1fr));
    height: 80%;
}
.container{
    margin: 2.5rem;
    background-color: white;
    display: grid;
    grid-template: repeat(4, 1fr) 3rem / 1fr;
    align-items: center;
    justify-items: center;
    border-radius: 2rem;
    box-shadow: 1px 1px 5px rgb(160, 160, 160);
}
.backgroundColor{
    background-color: rgb(213, 213, 213);
    height: 100%;
    width: 100%;
    border-radius: 2rem 2rem 0 0;
    display: grid;
}

.bookTitle{
    font: 700 1.7rem 'ubuntu';
    align-self: center;
    justify-self: center;
}
.bookAuthor{
    font: 400 1.3rem 'roboto';
    color: rgb(78, 78, 78);
}
.bookpages{
    font: 400 1.3rem 'roboto';
    color: rgb(78, 78, 78);
}
.readContainer{}
.bookReadStatus{
    font: 400 1.3rem 'roboto';
    color: rgb(78, 78, 78);
}
.bookReadCheckbox{
    position: relative;
    top: 0.1rem;
    margin-left: 1rem;
    accent-color: red;
    width: 1.2rem;
    height: 1.2rem;
}
.iconContainer{
    height: 100%;
    width: 2rem;
    display: flex;
    justify-content: center;
    gap: 1rem;
}
.edit{
    height: 100%;
    width: 2rem;
}
.trash{
    height: 100%;
    width: 2rem;
}

